// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`process css > createCSSModule: basic 1`] = `
[
  {
    "importer": Set {},
    "vBindCode": {
      "foo": Set {
        "v-bind(foo)",
      },
    },
  },
]
`;

exports[`process css > createCSSModule: multiple style tag 1`] = `
[
  {
    "importer": Set {},
    "vBindCode": {
      "foo": Set {
        "v-bind(foo)",
      },
    },
  },
  {
    "importer": Set {},
    "vBindCode": {
      "bar": Set {
        "v-bind(bar)",
      },
    },
  },
]
`;

exports[`process css > createCSSModule: no file with lang 1`] = `
[
  {
    "importer": Set {},
    "vBindCode": {
      "foo": Set {
        "v-bind(foo)",
      },
    },
  },
]
`;
